# InfernuxWithCSharp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-zh.md  README.md  SECURITY.md  SUPPORT.md  cmake_build.py  copy_dependencies.cmake.in  install_wheel.cmake  pyproject.toml  pytest_collect_raw.txt  requirements.txt  setup.py  test_collect.txt
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
TestProject/ProjectSettings/: GameView.ini
cmake/: clean_python_pycache.cmake  ensure_python_packaging_tools.cmake
cpp/infernux/: Infernux.cpp  Infernux.h  InfernuxCamera.cpp  ScenePicker.cpp
dev/: PR-014-animation-controller.md  code_quality_report.md
docs/: index.html  roadmap.html  wiki.html
docs/assets/: wiki-docs.json
docs/css/: roadmap.css  style.css  wiki.css
docs/js/: i18n.js  main.js  roadmap.js  wiki.js
docs/releases/: RELEASE_NOTES_v0.1.4.md
docs/wiki/: generate_api_docs.py  mkdocs.yml  mkdocs_api_nav.yml
docs/wiki/docs/: index.md
docs/wiki/site/: 404.html  index.html
docs/wiki/theme/: main.html
packaging/: database.py  embed_runtime_manager.py  hub_resources.py  hub_utils.py  infernux_hub.spec  infernux_hub_installer.spec  installer_gui.py  launcher.py  python_runtime.py  runtime_requirements.py  splash_screen.py  stage_bundled_python_runtime.py  style.py  ui_project_list.py  version_manager.py  windows_version_info.txt
packaging/installer/: install_python_runtime.py
packaging/model/: __init__.py  new_project_model.py  project_model.py
packaging/view/: __init__.py  control_pane_view.py  installs_view.py  new_project_view.py  sidebar_view.py
packaging/viewmodel/: __init__.py  control_pane_viewmodel.py  new_project_viewmodel.py
python/: run_tests.py
python/Infernux/: __init__.py  __init__.pyi  _jit_kernels.py  _jit_kernels.pyi  batch.py  coroutine.py  coroutine.pyi  debug.py  debug.pyi  instantiate.py  jit.py  jit.pyi  mathf.py  mathf.pyi  timing.py  timing.pyi
python/Infernux/components/: __init__.py  __init__.pyi  _cds_bridge.py  _component_coroutine.py  _component_lifecycle.py  _component_native.py  _component_physics.py  _component_serialization.py  _serialize_helpers.py  animator2d.py  builtin_component.py  builtin_component.pyi  component.py  component.pyi  decorators.py  decorators.pyi  inspector.pyi  ref_wrappers.py  ref_wrappers.pyi  registry.py  registry.pyi  script_loader.py  script_loader.pyi  serializable_object.py  serializable_object.pyi  serialized_field.py  serialized_field.pyi
python/Infernux/core/: __init__.py  __init__.pyi  anim_state_machine.py  animation_clip.py  asset_ref.py  asset_ref.pyi  asset_types.py  asset_types.pyi  assets.py  assets.pyi  audio_clip.py  audio_clip.pyi  material.py  material.pyi  node_graph.py  shader.py  shader.pyi  texture.py  texture.pyi
python/Infernux/engine/: __init__.py  __init__.pyi  _bootstrap_panels.py  _bootstrap_selection.py  _bootstrap_wiring.py  _build_dependencies.py  _build_splash.py  _play_mode_serialization.py  _scene_confirmation.py  _scene_prefab.py  _scene_save.py  bootstrap.py  bootstrap.pyi  bootstrap_hierarchy.py  bootstrap_inspector.py  bootstrap_project.py  component_restore.py  component_restore.pyi  csharp_tooling.py  deferred_task.py  deferred_task.pyi  engine.py  engine.pyi  game_builder.py  game_builder.pyi  i18n.py  i18n.pyi  library_sync.py  nuitka_builder.py  nuitka_builder.pyi  path_utils.py  path_utils.pyi  play_mode.py  play_mode.pyi  player_bootstrap.py  player_bootstrap.pyi  player_gui.py  player_gui.pyi  prefab_manager.py  prefab_manager.pyi  (+15 more)
python/Infernux/gizmos/: __init__.py  __init__.pyi  collector.py  collector.pyi  gizmos.py  gizmos.pyi
python/Infernux/input/: __init__.py  __init__.pyi
python/Infernux/lib/: _Infernux.pyi  _Infernux.pyi.bak2  __init__.py  __init__.pyi
python/Infernux/math/: __init__.py  __init__.pyi  coerce.py  coerce.pyi  vector.py  vector.pyi
python/Infernux/physics/: __init__.py  __init__.pyi  settings.py  settings.pyi
python/Infernux/rendergraph/: __init__.py  __init__.pyi  graph.py  graph.pyi
python/Infernux/renderstack/: __init__.py  __init__.pyi  _pipeline_common.py  _pipeline_common.pyi  _render_pass_mgmt.py  _render_pipeline_reload.py  _serialized_field_mixin.py  _serialized_field_mixin.pyi  bloom_effect.py  bloom_effect.pyi  chromatic_aberration_effect.py  chromatic_aberration_effect.pyi  color_adjustments_effect.py  color_adjustments_effect.pyi  default_deferred_pipeline.py  default_deferred_pipeline.pyi  default_forward_pipeline.py  default_forward_pipeline.pyi  discovery.py  discovery.pyi  film_grain_effect.py  film_grain_effect.pyi  fullscreen_effect.py  fullscreen_effect.pyi  geometry_pass.py  geometry_pass.pyi  injection_point.py  injection_point.pyi  render_pass.py  render_pass.pyi  render_pipeline.py  render_pipeline.pyi  render_stack.py  render_stack.pyi  render_stack_pipeline.py  render_stack_pipeline.pyi  resource_bus.py  resource_bus.pyi  sharpen_effect.py  (+7 more)
python/test/: _repro_gameobject_type.py  conftest.py  test_components_builtin_component.py  test_components_builtin_rigidbody.py  test_components_decorators.py  test_components_ref_wrappers.py  test_components_registry.py  test_components_serializable_object.py  test_components_serialized_field.py  test_core_asset_ref.py  test_core_asset_types.py  test_core_texture.py  test_coroutine.py  test_csharp_tooling.py  test_debug.py  test_engine_deferred_task.py  test_engine_play_mode.py  test_engine_undo.py  test_game_builder.py  test_gizmos.py  test_input.py  test_integration_components.py  test_integration_physics.py  test_integration_scene.py  test_jit.py  test_lib_native_lifetime_guard.py  test_math.py  test_native_console.py  test_native_inspector_panel.py  test_native_panels.py  test_native_project_panel.py  test_node_graph.py  test_physics.py  test_rendergraph.py  test_renderstack.py  test_scene_manager_defaults.py  test_serialized_object_views.py  test_timing.py
(+812 files in other folders)
